# hello_world_cpp

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  greeting.proto  hello_world.cc
