cc_library(
    name = "sqlitecpp",
    srcs = glob(["SQLiteCpp/src/*.cpp"]),
    hdrs = glob(["SQLiteCpp/include/SQLiteCpp/*.h"]),
    copts = ["-Isqlite3"],
    defines = [
        "SQLITE_DBCONFIG_ENABLE_LOAD_EXTENSION",
        "SQLITE_OMIT_LOAD_EXTENSION",
    ],
    strip_include_prefix = "SQLiteCpp/include",
    deps = [
        "@sqlite3",
    ],
)

cc_binary(
    name = "hello_world",
    srcs = ["hello_world.cc"],
    deps = [
        ":greeting_cc_proto",
        "@abseil-cpp//absl/strings",
    ],
)

cc_proto_library(
    name = "greeting_cc_proto",
    deps = [":greeting_proto"],
)

proto_library(
    name = "greeting_proto",
    srcs = ["greeting.proto"],
)

cc_test(
    name = "hello_world_test",
    size = "small",
    srcs = ["hello_world_test.cc"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
