workspace(name = "hello_world")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

new_local_repository(
    name = "openssl",
    build_file_content = """
cc_library(
  name = "ssl",
  srcs = ["lib/libssl.a"],
  hdrs = glob(["include/openssl/*.h"]),
  strip_include_prefix = "/include",
  visibility = ["//visibility:public"],
)

cc_library(
  name = "crypto",
  srcs = ["lib/libcrypto.a"],
  hdrs = glob(["include/openssl/*.h"]),
  strip_include_prefix = "/include",
  visibility = ["//visibility:public"],
)
""",
    path = "/opt/homebrew/Cellar/openssl@3/3.4.0",
)

LLVM_COMMIT = "ab4b5a2db582958af1ee308a790cfdb42bd24720"

LLVM_SHA256 = "da6ac0897bd4fcb509592d36236ddc9d5625fc018d4917f19aeb3ccf8bb6f83b"

http_archive(
    name = "llvm-raw",
    build_file_content = "# empty",
    sha256 = LLVM_SHA256,
    strip_prefix = "llvm-project-" + LLVM_COMMIT,
    urls = ["https://github.com/llvm/llvm-project/archive/{commit}.tar.gz".format(commit = LLVM_COMMIT)],
)

# This is needed since https://reviews.llvm.org/D143344.
# Not sure if it's a bug or a feature, but it doesn't hurt to keep an additional
# dependency here.
http_archive(
    name = "llvm_zstd",
    build_file = "@llvm-raw//utils/bazel/third_party_build:zstd.BUILD",
    sha256 = "7c42d56fac126929a6a85dbc73ff1db2411d04f104fae9bdea51305663a83fd0",
    strip_prefix = "zstd-1.5.2",
    urls = [
        "https://github.com/facebook/zstd/releases/download/v1.5.2/zstd-1.5.2.tar.gz",
    ],
)

# This is needed since https://reviews.llvm.org/D143320
# Not sure if it's a bug or a feature, but it doesn't hurt to keep an additional
# dependency here.
http_archive(
    name = "llvm_zlib",
    build_file = "@llvm-raw//utils/bazel/third_party_build:zlib-ng.BUILD",
    sha256 = "e36bb346c00472a1f9ff2a0a4643e590a254be6379da7cddd9daeb9a7f296731",
    strip_prefix = "zlib-ng-2.0.7",
    urls = [
        "https://github.com/zlib-ng/zlib-ng/archive/refs/tags/2.0.7.zip",
    ],
)

load("@llvm-raw//utils/bazel:configure.bzl", "llvm_configure")

llvm_configure(name = "llvm-project")
